--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
 	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">Where does it come from?</h2>
+				<h2 class="head-set">In Business</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
@@ -105,7 +105,7 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">How easy does it work?</h2>
+				<h2 class="head-set">In College</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
@@ -119,6 +119,36 @@
 			</div>
 
 		</div>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">In Interview</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 topdiv">
+					<img class="img-responsive" src="assets/img/holo1.jpg"></img>
+				</div>
+				<div class="col-md-6 col-sd-12 text-left bottomdiv">
+					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
+					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
+		
+				</div>
+			</div>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">Even Science Project</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 topdiv">
+					<img class="img-responsive" src="assets/img/holo8.jpg"></img>
+				</div>
+				<div class="col-md-6 col-sd-12 text-left bottomdiv">
+					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
+					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
+		
+				</div>
+		</div>			
+
+		</div>		
     </section>
 	<!--SECTION 3 END-->
     <!-- CONTACT SECTION END-->
