Finished HTML5 animation

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="text-center">
 				<div class="col-md-12 col-sm-12 col-xs-12 pad-bottom">
 					<div class="embed-responsive embed-responsive-16by9" align="left">
-						<iframe id="animation" class="embed-responsive-item" frameborder="false"; src="http://clips.animatron.com/5092ad33d9e3dc70b3344d8bf11ebd0d?a=true&r=false&c=false"></iframe>
+						<iframe id="animation" class="embed-responsive-item" frameborder="false"; src="http://clips.animatron.com/d1a9e7a2a99eaf9f271d1071a4f80c99?a=true&r=true&c=false"></iframe>
 					</div>
                 </div>
             </div>
