Homepage images finished

--- a/index.html
+++ b/index.html
@@ -82,36 +82,6 @@
 					</div>
                 </div>
             </div>
-            <div class="row text-center">
-
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-recycle  fa-5x"></i>
-                    <h4 class="head-set">IMMERSIVE </h4>
-                    <p>
-                        With the power of HoloLens and Augmented Reality,
-						you'll believe that where HoloTrip takes you is
-						real. Prepare to be amazed.
-                    </p>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-desktop  fa-5x"></i>
-                    <h4 class="head-set">ACCESSIBLE </h4>
-                    <p>
-                        Only with HoloTrip and HoloLens will you be able
-						to Explore, Work and Play Together with the power
-						to control your computer naturally.
-                    </p>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-bolt  fa-5x"></i>
-                    <h4 class="head-set">REALISTIC </h4>
-                    <p>
-						Physics calculations are exactly like real life, and
-						when you connect to the NVIDIA GRID&#8482; everything becomes
-						just that bit more amazing.
-                    </p>
-                </div>
-            </div>
         </div>
     </section>
     <!--ABOUT SECTION END  -->
@@ -141,24 +111,24 @@
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/bangkok.jpg" class="img-responsive " alt="" />
 
                         <h3>Explore New Countries</h3>
                         <h5>What is it life like in Bangkok? Find out!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/india.jpg" class="img-responsive " alt="" />
 
                         <h3>Explore New Cultures</h3>
                         <h5>Meet new people and discover new customs!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/japan.jpg" class="img-responsive " alt="" />
 
 						<h3>Explore New Languages</h3>
-                        <h5>Meet a native, make friends and learn a language!</h5>
+                        <h5>Learn new languages in exotic countries!</h5>
 
                 </div>
 
@@ -201,21 +171,21 @@
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/hololensmonitor.jpg" class="img-responsive " alt="" />
 
                         <h3>Work Efficiently</h3>
-                        <h5>With the AR, use anything as a monitor!</h5>
+                        <h5>With the power of AR, use anything as a monitor!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+						<img src="assets/img/hololensskype.jpg" class="img-responsive " alt="" />
 
                         <h3>Work Naturally</h3>
-                        <h5>Use accurate motion controls to work naturally!</h5>
+                        <h5>Walk and talk with colleagues in another city!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+						<img src="assets/img/hololensbike.jpg" class="img-responsive " alt="" />
 
 						<h3>Work Overseas</h3>
                         <h5>Inspect your project in three dimensions, overseas!</h5>
@@ -261,21 +231,21 @@
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/soccer.jpg" class="img-responsive " alt="" />
 
                         <h3>Play Sports</h3>
                         <h5>Play sports games - without the equipment!</h5>
 
                 </div>
 				<div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/helicopter.jpg" class="img-responsive " alt="" />
 
                         <h3>Play Soldiers</h3>
                         <h5>Immersive adrenaline-pumping gaming is here!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/fencing.jpg" class="img-responsive " alt="" />
 
 						<h3>Play Anything</h3>
                         <h5>New games are always being made for HoloTrip!</h5>
@@ -321,21 +291,21 @@
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/mountainclimbers.jpg" class="img-responsive " alt="" />
 
                         <h3>Explore Together</h3>
-                        <h5>Take a tour of your friend's home-town, from your own!</h5>
+                        <h5>Go on an amazing adventure - anywhere you want!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/boardmeeting.jpg" class="img-responsive " alt="" />
 
                         <h3>Work Together</h3>
                         <h5>Collaborate with your partners on another continent!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+                        <img src="assets/img/forza.jpg" class="img-responsive " alt="" />
 
 						<h3>Play Together</h3>
                         <h5>Amazing augmented reality games - with multi-player!</h5>
