--- a/play.html
+++ b/play.html
@@ -79,7 +79,7 @@
 					and movement detection. You can go anywhere you want, and the game will never end. This is the era of fully immersive gaming.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/argame.png"></img>
 				</div>
 			</div>
 
@@ -93,7 +93,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/earthhologram.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
 					<p>Gaming is more fun with friends. The competition to be the winner. The struggle to win the match with your mates. These are the moments that define gaming, the moments with friends.
@@ -122,7 +122,7 @@
 					the power of cloud processing. Physics calculations become more realistic and more responsive. With 120 frames per second - gaming will never be the same!</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/wreckfest.jpg"></img>
 				</div>
 			</div>
 
