Finished work page

--- a/explore.html
+++ b/explore.html
@@ -132,23 +132,24 @@
 	<!--SECTION 3 END-->
     <!-- CONTACT SECTION END-->
     <section id="clients">
-    <div class="container">
-		<div class="row text-center ">
-			<h2 class="head-set">PARTNERS</h2>
-		</div>
-        <div class="row text-center">
-			<div class="col-md-3"></div>
-            <div class="col-md-3">
-                <a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
-            </div>
-            <div class="col-md-3">
-                <a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
-            </div>
-			<div class="col-md-3"></div>
-        </div>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">PARTNERS</h2>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-4">
+					<a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-4">
+					<a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-4">
+					<a href="http://www.github.com"><img src="assets/img/github-logo.png" alt="" class="img-responsive" /></a>
+				</div>
+			</div>
 
-    </div>
-        </section>
+		</div>
+    </section>
     <!-- CLIENTS SECTION END-->
     <footer>
         © 2015 HoloTrip  | Website by Aaron Meaney and Wagner de Oliveira | <a href="http://www.designbootstrap.com/" target="_blank">Theme by DesignBootstrap</a>
