--- a/play.html
+++ b/play.html
@@ -135,14 +135,15 @@
 				<h2 class="head-set">PARTNERS</h2>
 			</div>
 			<div class="row text-center">
-				<div class="col-md-3"></div>
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
 				</div>
-				<div class="col-md-3"></div>
+				<div class="col-md-4">
+					<a href="http://www.github.com"><img src="assets/img/github-logo.png" alt="" class="img-responsive" /></a>
+				</div>
 			</div>
 
 		</div>
