--- a/work.html
+++ b/work.html
@@ -67,109 +67,86 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set"></h2>
+				<h2 class="head-set">INTERNATIONAL MEETINGS</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum hendrerit vel ligula ornare mollis. Nam commodo vestibulum ullamcorper. Sed lacinia venenatis quam tempus sodales. Vivamus et neque sed nisi sollicitudin posuere at nec odio. Nam gravida nisi a velit sollicitudin pellentesque. Cras id molestie tortor, eu scelerisque ante. Morbi nec ante maximus, pharetra leo in, eleifend nisi. Aliquam vehicula eros eu ligula viverra, quis malesuada purus ullamcorper. In quis luctus ligula. Fusce sapien orci, dictum quis volutpat et, ultricies sit amet eros. Nam eu dolor tempor, pretium metus sit amet, porttitor tellus.</p>
-					<p>Duis iaculis vulputate tempus. Vestibulum at libero fermentum dui malesuada blandit. Proin eu erat quis mauris lacinia semper. Nullam tempus sagittis elit, pellentesque pulvinar quam. Vestibulum ante felis, efficitur nec malesuada non, varius vitae elit. Ut venenatis facilisis rutrum. Nulla pretium varius rutrum. Fusce convallis, diam eu tempor convallis, augue nunc maximus odio, et iaculis orci ipsum et quam. Phasellus fermentum, lacus ut elementum pellentesque, dolor libero placerat arcu, a tempor est odio at quam. Vestibulum elementum rhoncus urna, in consequat nulla laoreet et. Nam augue enim, mollis et mi nec, ullamcorper fermentum ante. Nulla vitae tellus sit amet lectus euismod ornare</p>
-					
+					<p>A major activity that any businessman takes part in, is a meeting. And one important thing about meetings is that everybody needs to be in the same place for a meeting to occur.
+					But sometimes "everybody" isn't available to attend the meeting, perhaps they're on an international business trip. HoloTrip is the solution to this problem!</p>
+					<p>Whether you're in a different town or a different continent, setting up a HoloTrip is easy and productive! Once a meeting is set-up and everyone connects, everyone will be able
+					to move around in full 3D and will therefore be able to interact with each other as if they were really at a physical meeting!.</p>
+					<p>When you can act naturally, everything becomes easier! Collaborate with other colleagues, sending and receiving files are just as easy as passing an object to a friend.
+					You can even open up an application on your HoloLens and display what you're doing via HoloTrip! This is meetings revolutionized.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/holo4.jpg"></img>
+					<img class="img-responsive" src="assets/img/meeting.jpg"></img>
 				</div>
 			</div>
-
 		</div>
     </section>
 	<!--SECTION 1 END-->
 	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">In Business</h2>
+				<h2 class="head-set">RAPID COLLABORATION</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/holo1.jpg"></img>
+					<img class="img-responsive" src="assets/img/collaboration.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
-					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
-		
+					<p>Collaboration is an important part of making the project deadline. Failing to work together on important aspects of a project can be the difference between a
+					commercial failure and a smash hit product! With HoloTrip, we make collaboration easier, faster and more efficient!</p>
+					<p>When you open up a program in HoloLens and stream it through HoloTrip, everyone connected to your session will be able to see your progress. But that's not enough.
+					You can also record the streaming session and allow other users to take control of your program.</p>
+					<p>With HoloTrip, we even have tools to help you keep track of projects. You can create 3D notes and models for easier recollection and then send these notes
+					to your colleagues! Within the first year of launch, HoloTrip will be releasing a GitHub add-on! More information on that later...</p>
 				</div>
 			</div>
-
 		</div>
     </section>
 	<!--SECTION 2 END-->
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">In College</h2>
+				<h2 class="head-set">PROJECT MANAGEMENT OVERSEAS</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>Quisque maximus consequat turpis, vel eleifend nibh placerat in. Etiam vel rhoncus turpis. Nullam bibendum gravida augue vitae efficitur. Nullam laoreet metus dolor, in bibendum tortor maximus eget. Quisque quis condimentum quam, vitae feugiat ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi ex velit, mollis sit amet turpis a, vulputate imperdiet purus. Nunc ut mattis leo. Nam vestibulum elit id justo sollicitudin, ut facilisis tellus dictum. Nunc molestie nulla sit amet dictum condimentum. Mauris pharetra, arcu et rutrum hendrerit, sem lectus ultrices eros, ut tristique dui ligula a arcu. Vivamus sed sapien ac leo scelerisque luctus.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at enim tellus. Etiam vehicula vitae orci vitae tempor. Suspendisse potenti. Integer ac nibh pharetra, euismod lacus quis, cursus ante. Vestibulum lobortis libero dui. Donec suscipit est in justo tempor semper. Proin sed arcu quis urna interdum auctor. Praesent tincidunt leo nec molestie scelerisque. Integer tellus lorem, ultrices eget vulputate vitae, finibus ac tortor. Donec id tempor lectus, nec rhoncus urna. Aliquam sed lacus porttitor, efficitur sapien nec, sagittis erat. In aliquam augue porttitor quam luctus sagittis. In hac habitasse platea dictumst. Ut id vestibulum neque. Nulla condimentum metus sit amet nibh facilisis, sed dapibus velit euismod.</p>
-					
+					<p>When you're working on a big project, it can be stressful. It can be even more stressful when you have to leave home to work on that project overseas. Here at
+					HoloTrip, we can't make all your stress go away - but we can certainly help! Project Management Overseas, only with HoloTrip!</p>
+					<p>Just like the meetings, you can move around in full 3D to fully express yourself. Combine this with HoloTrip's 3D notes feature and the multitasking ability
+					of HoloLens, your productivity will sky-rocket! You can look at the project from all angles, and even simulate changes to the design.</p>
+					<p>With the HoloTrip GitHub add-on, you can change the files and notes relating to your project and then push them to your GitHub repository! Keep your data
+					neatly organised with full version control and branching. Physical project, on the web. Only with HoloTrip with GitHub. Coming soon.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/holo2.jpg"></img>
+					<img class="img-responsive" src="assets/img/hologram.jpg"></img>
 				</div>
 			</div>
-
 		</div>
-		<div class="container">
-			<div class="row text-center ">
-				<h2 class="head-set">In Interview</h2>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/holo1.jpg"></img>
-				</div>
-				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
-					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
-		
-				</div>
-			</div>
-		<div class="container">
-			<div class="row text-center ">
-				<h2 class="head-set">Even Science Project</h2>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/holo8.jpg"></img>
-				</div>
-				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
-					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
-		
-				</div>
-		</div>			
-
-		</div>		
     </section>
 	<!--SECTION 3 END-->
     <!-- CONTACT SECTION END-->
     <section id="clients">
-    <div class="container">
-		<div class="row text-center ">
-			<h2 class="head-set">PARTNERS</h2>
-		</div>
-        <div class="row text-center">
-			<div class="col-md-3"></div>
-            <div class="col-md-3">
-                <a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
-            </div>
-            <div class="col-md-3">
-                <a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
-            </div>
-			<div class="col-md-3"></div>
-        </div>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">PARTNERS</h2>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-4">
+					<a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-4">
+					<a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-4">
+					<a href="http://www.github.com"><img src="assets/img/github-logo.png" alt="" class="img-responsive" /></a>
+				</div>
+			</div>
 
-    </div>
-        </section>
+		</div>
+    </section>
     <!-- CLIENTS SECTION END-->
     <footer>
         © 2015 HoloTrip  | Website by Aaron Meaney and Wagner de Oliveira | <a href="http://www.designbootstrap.com/" target="_blank">Theme by DesignBootstrap</a>
