Added all images

--- a/together.html
+++ b/together.html
@@ -57,7 +57,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 
 					<h1>Together.</h1>
-					<h2>Experience the world with friends overseas.</h2>
+					<h2>Experience HoloTrip with friends overseas.</h2>
 				</div>
 
 			</div>
@@ -67,7 +67,7 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">INTERNATIONAL MEETINGS</h2>
+				<h2 class="head-set">EXPLORE TOGETHER</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
@@ -79,7 +79,7 @@
 					You can even open up an application on your HoloLens and display what you're doing via HoloTrip! This is meetings revolutionized.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/meeting.jpg"></img>
+					<img class="img-responsive" src="assets/img/tourists.jpg"></img>
 				</div>
 			</div>
 		</div>
@@ -88,11 +88,11 @@
 	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">RAPID COLLABORATION</h2>
+				<h2 class="head-set">WORK TOGETHER</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/collaboration.jpg"></img>
+					<img class="img-responsive" src="assets/img/marsmission.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
 					<p>Collaboration is an important part of making the project deadline. Failing to work together on important aspects of a project can be the difference between a
@@ -109,7 +109,7 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">PROJECT MANAGEMENT OVERSEAS</h2>
+				<h2 class="head-set">PLAY TOGETHER</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
@@ -121,7 +121,7 @@
 					neatly organised with full version control and branching. Physical project, on the web. Only with HoloTrip with GitHub. Coming soon.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/hologram.jpg"></img>
+					<img class="img-responsive" src="assets/img/gta.jpg"></img>
 				</div>
 			</div>
 		</div>
