All content finished

--- a/together.html
+++ b/together.html
@@ -71,12 +71,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>A major activity that any businessman takes part in, is a meeting. And one important thing about meetings is that everybody needs to be in the same place for a meeting to occur.
-					But sometimes "everybody" isn't available to attend the meeting, perhaps they're on an international business trip. HoloTrip is the solution to this problem!</p>
-					<p>Whether you're in a different town or a different continent, setting up a HoloTrip is easy and productive! Once a meeting is set-up and everyone connects, everyone will be able
-					to move around in full 3D and will therefore be able to interact with each other as if they were really at a physical meeting!.</p>
-					<p>When you can act naturally, everything becomes easier! Collaborate with other colleagues, sending and receiving files are just as easy as passing an object to a friend.
-					You can even open up an application on your HoloLens and display what you're doing via HoloTrip! This is meetings revolutionized.</p>
+					<p>Everyone loves to discover and explore new things, new places, new cultures, new languages. Everything that is new is exciting, and experiencing your excitement
+					with friends is what HoloTrip is all about! See your friend's home town. Take a tour of Egypt. Anything is possible with HoloTrip!</p>
+					<p>You can invite friends to your place or join them at theirs! When you connect, you'll see their world form around yours. It's like you're really there!
+					And it's not just you and your friend, up to 25 people can join per session and interact seamlessly, and that's where the real fun is!</p>
+					<p>If you don't know anybody else with a HoloLens, you can connect to a HoloHub - a virtual 3D chat-room located at real-world landmarks where you can
+					meet new people, play games with them, invite them to your place, join their project, and much more! HoloHub - only with HoloTrip.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
 					<img class="img-responsive" src="assets/img/tourists.jpg"></img>
@@ -95,12 +95,12 @@
 					<img class="img-responsive" src="assets/img/marsmission.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>Collaboration is an important part of making the project deadline. Failing to work together on important aspects of a project can be the difference between a
-					commercial failure and a smash hit product! With HoloTrip, we make collaboration easier, faster and more efficient!</p>
-					<p>When you open up a program in HoloLens and stream it through HoloTrip, everyone connected to your session will be able to see your progress. But that's not enough.
-					You can also record the streaming session and allow other users to take control of your program.</p>
-					<p>With HoloTrip, we even have tools to help you keep track of projects. You can create 3D notes and models for easier recollection and then send these notes
-					to your colleagues! Within the first year of launch, HoloTrip will be releasing a GitHub add-on! More information on that later...</p>
+					<p>When hands make light work. When you're working, it's better to work together! With HoloTrip we've made it faster and easier to work and collaborate on projects.
+					We've made it so that you don't need to be in the same room as your colleague to be able to see them in full-body 3D!</p>
+					<p>HoloTrip supports all HoloLens applications and allows you to use HoloLens as normal while in a HoloTrip session. This unlocks a plethora of possibilities and
+					opportunities for your team to collaborate more effectively! A colleague wants the latest documentation? Hand it to them naturally.</p>
+					<p>You don't even need to be in the same country as your colleagues to work on the same project. Be it engineering, technology or even art sculpting. With HoloTrip
+					we've made it possible for you to inspect your project in full 3D, with up-to-date documentation via GitHub and real-time editing.</p>
 				</div>
 			</div>
 		</div>
@@ -113,12 +113,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>When you're working on a big project, it can be stressful. It can be even more stressful when you have to leave home to work on that project overseas. Here at
-					HoloTrip, we can't make all your stress go away - but we can certainly help! Project Management Overseas, only with HoloTrip!</p>
-					<p>Just like the meetings, you can move around in full 3D to fully express yourself. Combine this with HoloTrip's 3D notes feature and the multitasking ability
-					of HoloLens, your productivity will sky-rocket! You can look at the project from all angles, and even simulate changes to the design.</p>
-					<p>With the HoloTrip GitHub add-on, you can change the files and notes relating to your project and then push them to your GitHub repository! Keep your data
-					neatly organised with full version control and branching. Physical project, on the web. Only with HoloTrip with GitHub. Coming soon.</p>
+					<p>After all of that exploring and working, we all need to relax and unwind. How about a game of football? Unfortunately the nearest football pitch is 10km away,
+					and you don't want to bother. With HoloTrip, you can play whatever you want, when you want - with friends.</p>
+					<p>You can play almost anything you can think of! Want to play a simple game of football? Go ahead. Want to save the world from an alien invasion? Go for it!
+					New HoloTrip compatible games are being made all the time that will deliver mind-blowing multiplayer experiences!</p>
+					<p>Be it a simple AR game or fully-fledged VR gaming - HoloTrip is ready for it! Jet fighters, military operations, mysteries, space, the sea - everything
+					is ready on HoloLens with HoloTrip. This is the future of gaming. Why not experience it with your friends?</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
 					<img class="img-responsive" src="assets/img/gta.jpg"></img>
