Added play button to video

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
 		<div class="overlay">
 			<!-- overylay class usage -->
 			<div class="container">
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class="col-md-8 col-md-offset-2 text-center pad-bottom">
 
 					<h1 class="scroll-me"><a href="#holotrip">HoloTrip</a></h1>
 					<h2 class="scroll-me"><a href="#explore">Explore.</a> <a href="#works">Work.</a> <a href="#play">Play.</a> <a href="#together">Together.</a></h2>
 				</div>
-
+				<div class="col-md-2 col-md-offset-5 text-center pad-bottom">
+					<a href="https://www.youtube.com/watch?v=aAKfdeOX3-o"><img src="assets/img/playButton.png" class="playButton"></img></a>
+				</div>
 			</div>
 		</div>
 	</div>
