Finished background video

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-	<div id="home-video-sec" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aAKfdeOX3-o',containment:'self',autoPlay:true, mute:true, startAt:0, loop:true, opacity:1,mute: true,showControls:false}">
+	<div id="home-video-sec" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=7cxLt_BvyGw&feature=youtu.be&ab_channel=Reccy',containment:'self',autoPlay:true, mute:true, startAt:0, loop:true, opacity:1,mute: true,showControls:false}">
 		<div class="overlay">
 			<!-- overylay class usage -->
 			<div class="container">
