--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<h2 class="scroll-me"><a href="#explore">Explore.</a> <a href="#works">Work.</a> <a href="#play">Play.</a> <a href="#together">Together.</a></h2>
 				</div>
 				<div class="col-md-2 col-md-offset-5 text-center pad-bottom">
-					<a href="https://www.youtube.com/watch?v=aAKfdeOX3-o"><img src="assets/img/playButton.png" class="playButton"></img></a>
+					<a href="https://www.youtube.com/watch?v=1PefPV8Q7jM&feature=youtu.be&ab_channel=Reccy"><img src="assets/img/playButton.png" class="playButton"></img></a>
 				</div>
 			</div>
 		</div>
